Fix an issue with the date started and date read forms were cut off

--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -29,6 +29,10 @@ a {
     text-align: center;
 }
 
+.align-right {
+    text-align: right;
+}
+
 .hidden {
     display: none !important;
 }
