--- a/src/assets/scss/elements/_bookForm.scss
+++ b/src/assets/scss/elements/_bookForm.scss
@@ -76,8 +76,8 @@
     }
 
     .not-read-yet {
-        margin-top: 31px;
-        font-size: 1.1em;
+        margin-top: -10px;
+        font-size: .9em;
 
         input[type='checkbox'] {
             margin-right: 5px;
